# CPP-Utils

./: .gitignore  CMakeLists.txt  README.md  Utils.vcxproj  customLogging.cpp  glad.c  main  main.cpp  run-anywhere.sh  run.sh  setupDearIMGUI
.github/workflows/: CMakeBuild.yml  msbuild.yml
graphics/rendering/opengl/: camera.cpp  glrenderer.cpp  program.cpp
graphics/shaders/: fragment.glsl
graphics/window/: window.cpp
include_headers/: CustomLogging.hpp  blockType.hpp  camera.hpp  customLogging.hpp  glrenderer.hpp  math.hpp  program.hpp  shader.hpp  shadercode.hpp  window.hpp  world.hpp  worldGenerator_A.hpp
world/: world.cpp  worldGenerator_A.cpp
